<resources>
    <string name="app_name">Lexivo</string>
    <string name="login_signup">Login / Sign up</string>
    <string name="description_account_icon_placeholder">Account Icon Placeholder</string>
    <string name="daily_average">Your daily average is</string>
    <string name="minutes">minutes</string>
    <string name="my_dictionaries">My Dictionaries</string>
    <string name="import_dictionary">Import Dictionary</string>
    <string name="btn_from_memory">From Memory</string>
    <string name="btn_by_id">By ID</string>
    <string name="btn_add_dictionary_description">Opens add dictionary modal</string>
    <string name="my_dictionaries_rec_view_description">Dictionary List</string>
    <string name="dictionary_item_description">Dictionary Item</string>
    <string name="dismiss">Dismiss</string>
    <string name="create">Create</string>
    <string name="languages_dropdown_description">Pick the Language</string>
    <string name="spinner_dropdown_item_placeholder">Item</string>
    <string name="spinner_selected_item_placeholder">Selected Item</string>
    <string name="placeholder_text_language">Language</string>
    <string name="word_count_label">Words:</string>
    <string name="expression_count_label">Expressions:</string>
    <string name="count_placeholder">0</string>
    <string name="no_dictionaries">No Dictionaries</string>
    <string name="import_dictionary_btn">Import</string>
    <string name="enter_dictionary_id">Enter Dictionary ID</string>
    <string name="toast_dictionary_already_exists">Dictionary already exists</string>
    <string name="btn_export_dictionary_description">opens the export dictionary modal</string>
    <string name="btn_practice_words_static">Practice Words</string>
    <string name="btn_action_practice_dynamic">lang</string>
    <string name="btn_quiz_text">Quiz</string>
    <string name="words_text">Words</string>
    <string name="btn_expressions_text">Expressions</string>
    <string name="rules_btn_text">Grammar</string>
    <string name="save">Save</string>
    <string name="textview_dictionary_text">Export dictionary</string>
    <string name="btn_copyid_text">Copy ID</string>
    <string name="btn_export_json_text">Export JSON</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="delete_modal_header">Are you sure you want to delete?</string>
    <string name="btn_yes_delete_modal">Yes</string>
    <string name="btn_no_delete_modal">No</string>
    <string name="hint_input_search">Search…</string>
    <string name="description_icon_search">Search icon; magnifier</string>
    <string name="btn_add_word_description">Forwards to add word activity</string>
    <string name="words_rec_view_description">All words list in dictionary</string>
    <string name="word_type_placeholder">noun</string>
    <string name="text_btn_delete">Delete</string>
    <string name="content_description_icon_sound">Play sound</string>
    <string name="placeholder_word_singular">der Weihnachtsmann</string>
    <string name="content_description_word_plural">plural</string>
    <string name="abbrv_plural">pl.</string>
    <string name="text_word_plural">die Weihnachtsmänner</string>
    <string name="text_word_addition">(Addition)</string>
    <string name="text_word_comment">This is a super extra very long comment that needs to be broken</string>
    <string name="text_word_translation">Santa Claus</string>
    <string name="text_gender_masculine">masculine</string>
    <string name="text_gender_feminine">feminine</string>
    <string name="text_gender_neutral">neutral</string>
    <string name="text_gender_personal">personal</string>
    <string name="text_gender_plural">plural</string>
    <string name="text_no_words">No Words</string>
    <string name="text_header_add_word">Add Word</string>
    <string name="text_word">Word</string>
    <string name="content_description_btn_save_add_edit_word">Save the added or edited word</string>
    <string name="text_btn_save_add_edit_word">Save</string>
    <string name="text_past_1_header">past 1</string>
    <string name="text_word_past_1">NULL</string>
    <string name="text_word_past_2_header">past 2</string>
    <string name="text_word_past_2">NULL</string>
    <string name="content_description_word_past">verb in one form of past tense</string>
    <string name="text_label_spinner_word_type">Type</string>
    <string name="text_label_spinner_word_gender">Gender</string>
    <string name="hint_text_input">Type here…</string>
    <string name="text_label_static_input_word_original">Word in</string>
    <string name="text_label_static_input_word_native">Word in Native</string>
    <string name="text_label_static_input_word_original_addition">Details - Word in</string>
    <string name="text_label_static_input_word_native_addition">Details - Word in Native</string>
    <string name="text_label_dynamic_input_word_original">Language</string>
    <string name="placeholder_label">Label</string>
    <string name="text_label_input_word_plural_static">Plural - Word in </string>
    <string name="text_label_input_word_past_1_static">Past 1 - Word in </string>
    <string name="text_label_input_word_past_2_static">Past 2 - Word in </string>
    <string name="text_label_input_word_comment">Comment</string>
    <string name="text_label_section_add_photo">Photo</string>
    <string name="content_description_button_add_photo">add photo</string>
    <string name="text_label_section_add_audio">Audio</string>
    <string name="text_btn_upload_audio">Upload</string>
    <string name="text_btn_record_audio">Record</string>
    <string name="text_header_edit_word">Edit Word</string>
    <string name="label_modal_choose_word_dictionary">Choose category</string>
    <string name="text_word_practice">Word Practice</string>
    <string name="text_no_more_words">No more words</string>
    <string name="text_btn_shuffle_and_start_again">Shuffle and start again</string>
    <string name="placeholder_word_plural">die Weihnachtsmänner</string>
    <string name="placeholder_word_translation">Santa Claus</string>
    <string name="btn_edit_word_description">Edit word</string>
    <string name="modal_confirm_dictionary_delete_label">Type \"delete dictionary\" to confirm</string>
    <string name="btn_practice_expressions_static">Practice Expressions</string>
    <string name="description_btn_go_back">Go back</string>
    <string name="placeholder_toast_message">Toast Message</string>
</resources>