<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:layout_marginHorizontal="24dp">

    <Button
        android:id="@+id/btnBack"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="@color/background"
        android:contentDescription="@string/description_btn_go_back"
        android:foreground="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/usernameAndActiveMinutesContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack">

        <TextView
            android:id="@+id/text_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:breakStrategy="simple"
            android:text="@string/login_signup"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/dailyAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:breakStrategy="simple"
                android:text="@string/daily_average"
                android:textColor="@color/secondary_text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textDailyAverageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:breakStrategy="simple"
                android:fontFamily="@font/poppins_light"
                android:text="@string/minutes"
                android:textColor="@color/secondary_text"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/accountPhotoBtn"
        android:layout_width="64dp"
        android:layout_height="74dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/description_account_icon_placeholder"
        android:foreground="@drawable/account_icon"
        android:foregroundGravity="center"
        android:translationZ="0.3dp"
        app:cornerRadius="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usernameAndActiveMinutesContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>