<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="1dp">

    <Button
        android:id="@+id/dictionaryButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:maxWidth="450dp"
        android:layout_height="180dp"
        android:contentDescription="@string/dictionary_item_description"
        android:foreground="@drawable/language_flag_english"
        android:foregroundGravity="fill"
        android:background="@color/accent"
        android:padding="8dp"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/language_element_count_bg_color"/>

    <TextView
        android:id="@+id/languageOnDictionaryCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_dropdown_item_placeholder"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginTop="63dp"
        android:textColor="@color/background"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="19dp"
        android:paddingVertical="6dp"
        android:layout_marginTop="120dp"
        android:background="@color/language_element_count_bg_color">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/word_count_label"
                android:textColor="@color/background"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/wordCountOnDictionaryCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/count_placeholder"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/background"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expression_count_label"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/background"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/expressionCountOnDictionaryCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_placeholder"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/background"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>