<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/outline_box"
    android:layout_marginTop="8dp"
    android:padding="16dp">

<!--    Type  -->
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_type_placeholder"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:textColor="@color/secondary_text"
        android:breakStrategy="simple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

<!--    Gender  -->
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_gender_masculine"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:textColor="@color/gender_male"
        android:breakStrategy="simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

<!--    Content wrapper  -->
    <LinearLayout
        android:id="@+id/wordContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/word_inner_grid_margin">

<!--        Singular Container  -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

<!--            Singular  -->
            <TextView
                android:id="@+id/singular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_word_singular"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/main_text"
                android:breakStrategy="simple"
                android:textSize="16sp"/>

<!--            Singular - details  -->
            <TextView
                android:id="@+id/additionOriginal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_word_addition"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                android:breakStrategy="simple"
                android:visibility="visible"/>

        </LinearLayout>

<!--        Plural  -->
        <TextView
            android:id="@+id/plural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_word_plural"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:breakStrategy="simple"
            android:textColor="@color/main_text"/>

<!--        Past 1  -->
        <TextView
            android:id="@+id/past1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_word_past_1"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:breakStrategy="simple"
            android:textColor="@color/main_text"/>

<!--        Past 2  -->
        <TextView
            android:id="@+id/past2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_word_past_2"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:breakStrategy="simple"
            android:textColor="@color/main_text"/>

        <include
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginVertical="@dimen/word_inner_grid_margin"
            layout="@layout/separator" />

<!--        Translation section -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

<!--            Translation  -->
            <TextView
                android:id="@+id/translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_word_translation"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:breakStrategy="simple"
                android:textColor="@color/main_text"/>

<!--            Translation - details  -->
            <TextView
                android:id="@+id/additionTranslation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_word_addition"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                android:breakStrategy="simple"
                android:visibility="visible"/>

        </LinearLayout>

        <include
            android:id="@+id/separatorLower"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginVertical="@dimen/word_inner_grid_margin"
            layout="@layout/separator" />

<!--        Comment  -->
        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_word_comment"
            android:breakStrategy="simple"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:textColor="@color/secondary_text"
            android:visibility="visible"/>

    </LinearLayout>

<!--     Button Delete -->
    <TextView
        android:id="@+id/btnOpenDeleteModal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/word_inner_grid_margin"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_btn_delete_word"
        android:textColor="@color/btn_delete_word"
        android:textSize="16sp"
        android:breakStrategy="simple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wordContent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>