<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/lightest_gray"
    app:cardCornerRadius="32dp"
    app:cardElevation="0dp"
    app:strokeColor="@color/light_gray_medium"
    app:strokeWidth="0.5dp"
    app:rippleColor="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp">

        <!--            Word type  -->
        <TextView
            android:id="@+id/wordType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:breakStrategy="simple"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/word_type_placeholder"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@id/wordGender"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--            Word gender  -->
        <TextView
            android:id="@+id/wordGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_gender_masculine"
            android:textColor="@color/primary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--            Word singular central  -->
        <TextView
            android:id="@+id/wordSingularCentral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/placeholder_word_singular"
            android:textColor="@color/main_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wordType"
            app:layout_constraintVertical_bias="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>