<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#88000000"
    android:id="@+id/languageModal"
    android:translationZ="10dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/createEditDictionaryModal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layoutMargin"
        android:background="@color/background"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layoutMargin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_modal_header"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textAlignment="center"
                android:textColor="@color/main_text"/>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnDelete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/accent"
                    android:elevation="0.2dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:letterSpacing="0.02"
                    android:text="@string/btn_yes_delete_modal"
                    android:textAllCaps="false"
                    android:textColor="@color/background"
                    android:textSize="16sp"
                    app:cornerRadius="24dp" />

                <Button
                    android:id="@+id/btnCancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/primary"
                    android:elevation="0.2dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:letterSpacing="0.02"
                    android:text="@string/btn_no_delete_modal"
                    android:textAllCaps="false"
                    android:textColor="@color/background"
                    android:textSize="16sp"
                    app:cornerRadius="24dp" />


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>